--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -21,11 +21,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "5ZM_3SXblMhQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ZM_3SXblMhQ",
+        "outputId": "146ab90a-b44e-4f89-c023-f66cad9937d0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/719.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m719.8/719.8 kB\u001b[0m \u001b[31m47.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.6 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m88.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hMounted at /content/gdrive\n"
+          ]
+        }
+      ],
       "source": [
         "#hide\n",
         "! [ -e /content ] && pip install -Uqq fastbook\n",
@@ -35,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "measpT0YlMhR"
       },
@@ -625,45 +639,107 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 220
+        },
         "id": "RFfkJ0ZGlMhZ",
-        "outputId": "c7d2deb2-2674-4d51-b1a4-2c45eaecbc06"
+        "outputId": "96fdae13-8978-42a3-ec5f-02a0bbe04778"
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: left;\">\n",
-              "      <th>epoch</th>\n",
-              "      <th>train_loss</th>\n",
-              "      <th>valid_loss</th>\n",
-              "      <th>error_rate</th>\n",
-              "      <th>time</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>0</td>\n",
-              "      <td>0.180385</td>\n",
-              "      <td>0.023942</td>\n",
-              "      <td>0.006766</td>\n",
-              "      <td>00:16</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "    /* Turns off some styling */\n",
+              "    progress {\n",
+              "        /* gets rid of default border in Firefox and Opera. */\n",
+              "        border: none;\n",
+              "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+              "        background-size: auto;\n",
+              "    }\n",
+              "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+              "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+              "    }\n",
+              "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+              "        background: #F44336;\n",
+              "    }\n",
+              "</style>\n"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      <progress value='811712512' class='' max='811706944' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      100.00% [811712512/811706944 00:55&lt;00:00]\n",
+              "    </div>\n",
+              "    "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet34-b627a593.pth\" to /root/.cache/torch/hub/checkpoints/resnet34-b627a593.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 83.3M/83.3M [00:00<00:00, 150MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "    /* Turns off some styling */\n",
+              "    progress {\n",
+              "        /* gets rid of default border in Firefox and Opera. */\n",
+              "        border: none;\n",
+              "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+              "        background-size: auto;\n",
+              "    }\n",
+              "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+              "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+              "    }\n",
+              "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+              "        background: #F44336;\n",
+              "    }\n",
+              "</style>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -678,20 +754,74 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>0.056023</td>\n",
-              "      <td>0.007580</td>\n",
-              "      <td>0.004060</td>\n",
-              "      <td>00:20</td>\n",
+              "      <td>0.152443</td>\n",
+              "      <td>0.025044</td>\n",
+              "      <td>0.006766</td>\n",
+              "      <td>00:45</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "    /* Turns off some styling */\n",
+              "    progress {\n",
+              "        /* gets rid of default border in Firefox and Opera. */\n",
+              "        border: none;\n",
+              "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+              "        background-size: auto;\n",
+              "    }\n",
+              "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+              "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+              "    }\n",
+              "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+              "        background: #F44336;\n",
+              "    }\n",
+              "</style>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: left;\">\n",
+              "      <th>epoch</th>\n",
+              "      <th>train_loss</th>\n",
+              "      <th>valid_loss</th>\n",
+              "      <th>error_rate</th>\n",
+              "      <th>time</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>0.048642</td>\n",
+              "      <td>0.031689</td>\n",
+              "      <td>0.006766</td>\n",
+              "      <td>00:44</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
         }
       ],
       "source": [
